src/test/ui/const-generics/defaults/complex-generic-default-expr.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/complex-generic-default-expr.rs:6:47
   |
LL | struct Foo<const N: usize, const M: usize = { N + 1 }>;
   |                                               ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/complex-generic-default-expr.rs:10:62
   |
LL | struct Bar<T, const TYPE_SIZE: usize = { std::mem::size_of::<T>() }>(T);
   |                                                              ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to 2 previous errors

